Fix title spacing.

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -26,6 +26,10 @@ b {
 	font-weight: 200;
 }
 
+.page-title {
+	margin-bottom: 50px;
+}
+
 .container {
 	max-width: 900px;
 }
@@ -37,7 +41,10 @@ b {
 .chart-container {
 	height: 450px;
 	max-height: 100vh;
-	margin-top: 30px;
+}
+
+.chart-title {
+	margin-bottom: 0;
 }
 
 .y-axis {
